==> BAIJIANGA/W25QXX_Diver/6_demo_标准库_硬件SPI_DMA_烧录算法文件生成/Includes/Library_Files/bsp_spi_flash.c <==
#include "bsp_spi_flash.h"
#include <stdio.h>
#include "stm32f10x_spi.h"
#include "stm32f10x_dma.h"
#include "dma.h"
#include "delay.h"

void SPI_FLASH_Init(void)
{
    //uint16_t a = 0;
  SPI_InitTypeDef  SPI_InitStructure;
  GPIO_InitTypeDef GPIO_InitStructure;
	//delay_init();
//    MYDMA_Config(DMA1_Channel3,(u32)&SPI1->DR,0,0);
//    MYDMA_Config2(DMA1_Channel2,(u32)&SPI1->DR,0,0);
    
     	RCC_AHBPeriphClockCmd(RCC_AHBPeriph_DMA1, ENABLE);	//使能DMA传输
//	
//    DMA_DeInit(DMA1_Channel3);   //将DMA的通道1寄存器重设为缺省值
//	//DMA1_MEM_LEN=cndtr;
	DMA_InitStructure.DMA_MemoryBaseAddr = SPI1->DR;  //DMA外设ADC基地址
//	DMA_InitStructure.DMA_MemoryBaseAddr = 0;  //DMA内存基地址
//	DMA_InitStructure.DMA_DIR = DMA_DIR_PeripheralDST;  //数据传输方向，从内存读取发送到外设
//	DMA_InitStructure.DMA_BufferSize = 0;  //DMA通道的DMA缓存的大小
//	DMA_InitStructure.DMA_PeripheralInc = DMA_PeripheralInc_Disable;  //外设地址寄存器不变
//	DMA_InitStructure.DMA_MemoryInc = DMA_MemoryInc_Enable;  //内存地址寄存器递增
//	DMA_InitStructure.DMA_PeripheralDataSize = DMA_PeripheralDataSize_Byte;  //数据宽度为8位
//	DMA_InitStructure.DMA_MemoryDataSize = DMA_MemoryDataSize_Byte; //数据宽度为8位
//	DMA_InitStructure.DMA_Mode = DMA_Mode_Normal;  //工作在正常缓存模式
//	DMA_InitStructure.DMA_Priority = DMA_Priority_Medium; //DMA通道 x拥有中优先级 
//	DMA_InitStructure.DMA_M2M = DMA_M2M_Disable;  //DMA通道x没有设置为内存到内存传输
//	DMA_Init(DMA1_Channel3, &DMA_InitStructure);  //根据DMA_InitStruct中指定的参数初始化DMA的通道USART1_Tx_DMA_Channel所标识的寄存器
	/* 使能SPI时钟 */
	SPI_APBxClock_FUN ( SPI_CLK, ENABLE );
 //a = ENABLE;
  /* 配置SPI的 CS引脚，普通IO即可 */
	SPI_CS_APBxClock_FUN ( SPI_CS_CLK, ENABLE );
  GPIO_InitStructure.GPIO_Pin = SPI_CS_PIN;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
  GPIO_Init(SPI_CS_PORT, &GPIO_InitStructure);
	
  /* 配置SPI的 SCK引脚*/
	SPI_SCK_APBxClock_FUN ( SPI_SCK_CLK, ENABLE );
  GPIO_InitStructure.GPIO_Pin = SPI_SCK_PIN;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_Init(SPI_SCK_PORT, &GPIO_InitStructure);

  /* 配置SPI的 MISO引脚*/
	SPI_MISO_APBxClock_FUN ( SPI_MISO_CLK, ENABLE );
  GPIO_InitStructure.GPIO_Pin = SPI_MISO_PIN;
  GPIO_Init(SPI_MISO_PORT, &GPIO_InitStructure);

  /* 配置SPI的 MOSI引脚*/
	SPI_MOSI_APBxClock_FUN ( SPI_MOSI_CLK, ENABLE );
  GPIO_InitStructure.GPIO_Pin = SPI_MOSI_PIN;
  GPIO_Init(SPI_MOSI_PORT, &GPIO_InitStructure);

  /* 停止信号 FLASH: CS引脚高电平*/
  SPI_FLASH_CS_HIGH();

  /* SPI 模式配置 */
  // FLASH芯片 支持SPI模式0及模式3，据此设置CPOL CPHA
  SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
  SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
  SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
  SPI_InitStructure.SPI_CPOL = SPI_CPOL_High;
  SPI_InitStructure.SPI_CPHA = SPI_CPHA_2Edge;
  SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;
  SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_4;
  SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
  SPI_InitStructure.SPI_CRCPolynomial = 7;
  SPI_Init(SPIx , &SPI_InitStructure);

  /* 使能 SPI  */
  SPI_Cmd(SPIx , ENABLE);
	
}

u8 SPI_FLASH_SendByte(u8 byte)
{
  /* 等待发送缓冲区为空，TXE事件 */
  while (SPI_I2S_GetFlagStatus(SPIx , SPI_I2S_FLAG_TXE) == RESET);

  /* 写入数据寄存器，把要写入的数据写入发送缓冲区 */
  SPI_I2S_SendData(SPIx , byte);

  /* 等待接收缓冲区非空，RXNE事件 */
  while (SPI_I2S_GetFlagStatus(SPIx , SPI_I2S_FLAG_RXNE) == RESET);

  /* 读取数据寄存器，获取接收缓冲区数据 */
  return SPI_I2S_ReceiveData(SPIx );
}
